fix alignment of maker-detail box, ensuring it is 100% height of the row

--- a/wp-content/themes/makerfaire/less/projects.less
+++ b/wp-content/themes/makerfaire/less/projects.less
@@ -124,6 +124,7 @@
 						justify-content: center;
 						overflow: hidden;
 						min-width: 250px;
+						min-height: 250px;
 						img { 
 							object-fit: cover;
 							width: 100%;
@@ -133,6 +134,9 @@
 					h4 {
 						font-size: 24px;
 						font-weight: 400;
+					}
+					.maker-detail {
+						height: 100%;
 					}
 					.maker-bio {
 						/*Alicia wants the whole thing
